salesforce_sfdx/main/default/objects/OSFMX_ElectricityConsumption__c/OSFMX_ElectricityConsumption__c.object-meta.xml
<CustomObject>
    <label>Consumo Electricidad</label>
    <nameField>
        <label>Consumo Electricidad</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consumos Electricidad</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>