salesforce_sfdx/main/default/objects/OSFMX_ElectricityConsumption__c/fields/OSFMX_AnnualConsumptionElectricity__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_AnnualConsumptionElectricity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Consumo anual electricidad (MWh)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>