salesforce_sfdx/main/default/objects/OSFMX_ElectricityConsumption__c/fields/OSFMX_ExtractionNode__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ExtractionNode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nodo de extracción</label>
    <referenceTo>OSFMX_InjectionNode__c</referenceTo>
    <relationshipLabel>Consumos Electricidad</relationshipLabel>
    <relationshipName>Consumos_Electricidad</relationshipName>
    <type>Lookup</type>
</CustomField>