salesforce_sfdx/main/default/objects/OSFMX_ElectricityConsumption__c/fields/OSFMX_MaximumDemand__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MaximumDemand__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Demanda máxima(kW)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>