salesforce_sfdx/main/default/objects/OSFMX_ElectricityConsumption__c/fields/OSFMX_RMU__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_RMU__c</fullName>
    <defaultValue>0</defaultValue>
    <label>RMU</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>