salesforce_sfdx/main/default/objects/OSFMX_ElectricityConsumption__c/fields/OSFMX_VoltagebykV__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_VoltagebykV__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Voltaje(kV)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>